# evita-material-template

./: .gitignore  CITATION.cff  LICENSE.code  Makefile  README.md  index.html  objects.inv  pylock.toml  pyproject.toml  requirements.txt  searchindex.js
.github/workflows/: sphinx.yml
Python-HPDA/: index.html
Python-HPDA-1-Motivation/: index.html
Python-HPDA-2-EfficientArrayComputing/: index.html
_sources/: Python-HPDA-1-Motivation.ipynb.txt  Python-HPDA-2-EfficientArrayComputing.ipynb.txt  index.md.txt
_sources/episodes/: Example-PDF-markdown.md.txt
branch/main/: index.html  objects.inv  searchindex.js
branch/use-furo-theme/: index.html  objects.inv  searchindex.js
content/: Python-HPDA-0-SoftwareSetup.ipynb  Python-HPDA-1-Motivation.ipynb  Python-HPDA-2-EfficientArrayComputing.ipynb  Python-HPDA.ipynb  conf.py  index.md  sphinx_evita.py
content/_static/: overrides.css
content/episodes/: Example-PDF-markdown.md  Python-HPDA-0-SoftwareSetup.ipynb  Python-HPDA-1-Motivation.ipynb  Python-HPDA-2-EfficientArrayComputing-markdown.md  Python-HPDA-2-EfficientArrayComputing.ipynb  Python-HPDA.ipynb
content/note_for_course_developers/: note.ipynb
content/notebook/: Python-HPDA-0-SoftwareSetup.ipynb  Python-HPDA-1-Motivation.ipynb  Python-HPDA-2-EfficientArrayComputing.ipynb  Python-HPDA.ipynb
content/quiz/: Python-HPDA-2-EfficientArrayComputing.md
content/reference/: 3-jupyter-notebook-styling.ipynb  (+2 more)
genindex/: index.html
guide/: index.html
reference-for-learners/: index.html
search/: index.html
singlehtml/: index.html  objects.inv
(+49 files in other folders)
